# ufront

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: basic.py  benchmark.py  bert.py  bert_onn_test.py  bert_onnx_test.py  bert_test.py  bert_torch_test.py  chatglm.py  cnn.py  cnn_definition.py  compilation_test.ipynb  compilation_test_torch.ipynb  compilation_tf_test.ipynb  imagenet_inference.ipynb  keras_bert_test.py  keras_def.py  keras_test.py  lstm_test.py  multihead_attention.py  native_test.py  onnx_cnn.py  onnx_test.py  test_accuracy.ipynb  test_tf.ipynb  test_tf_A100.ipynb  test_torch.ipynb  test_torch_A100.ipynb  torch_bert.py  torch_cnn.py  torch_def.py  torch_e2e_demo.py  torch_test.py
examples/chatglm_q/: loader.py  model.py
examples/output_ir/: keras_BertModel.ir  keras_ConcatenatedCNN.ir  keras_MobilenetV3small.ir  keras_NestedCNN.ir  keras_ResNet18.ir  keras_SequentialCNN.ir  keras_ShuffleNet.ir  keras_SqueezeNet.ir  keras_densenet121.ir  keras_efficientnetb0.ir  keras_inception_v3.ir  keras_mobilenetv2_1.00_224.ir  keras_resnet50.ir  keras_resnet50v2.ir  keras_vgg16.ir  keras_vit-b16.ir  keras_xception.ir  native_ComplexCNN.ir  onnx_BertModel.ir  onnx_ComplexCNN.ir  onnx_DenseNet.ir  onnx_EfficientNet.ir  onnx_Inception3.ir  onnx_MobileNetV3.ir  onnx_RegNet.ir  onnx_ResNet.ir  onnx_ResNet18.ir  onnx_ShuffleNetV2.ir  onnx_SqueezeNet.ir  onnx_VisionTransformer.ir  torch_BertModel.ir  torch_ComplexCNN.ir  torch_ConvNeXt.ir  torch_DenseNet.ir  torch_EfficientNet.ir  torch_Inception3.ir  torch_MaxVit.ir  torch_MobileNetV3.ir  torch_MultiHeadAttention.ir  torch_RegNet.ir  (+7 more)
examples/vit_keras/: vit.py
rawapi/: Cargo.toml  bindgen.sh  build.rs  wrapper.h
src/: databuffer.rs  error.rs  graph.rs  initializer.rs  lib.rs  main.rs  model.rs  operator.rs  optimizer.rs  prelude.rs  tensor.rs  types.rs
(+8 files in other folders)
