[package]
name = "ufront"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ufront"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.18.0"
#pyo3 = { version = "0.18.0", features = ["extension-module"] }
pyo3 = { version = "0.18.0" }

half = "1.6"
ndarray = "0.15.6"
num_enum = "0.5.1"
dict_derive = "0.4.0"