[package]
name = "ufront"
version = "0.1.1"
edition = "2021"
authors = ["Guoqing Bao <guoqing.bao@enflame-tech.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ufront"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.18.0"
tuple-conv = "1.0.1"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
#pyo3 = { version = "0.18.0" }
num = "0.4"
half = "1.6"
ndarray = "0.15.6"
num_enum = "0.5.1"
dict_derive = "0.4.0"
itertools = "0.10.5"
indexmap = "1.9.2"
log = { version = "0.4"}
env_logger = "0.10.0"