[package]
name = "ufront"
version = "0.1.1"
edition = "2021"
authors = ["Guoqing Bao <guoqing.bao@enflame-tech.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ufront"
crate-type = ["cdylib"]

[dependencies]
#numpy = {version="0.19.0", features=["half"]}
#numpy = {path= "rust-numpy", version="0.19.0", features=["half"]}
numpy = {git = "https://github.com/PyO3/rust-numpy.git", features=["half"]}
tuple-conv = "1.0.1"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
num = "0.4"
half = { version = "2.0"}
ndarray = "0.15.6"
num_enum = "0.5.1"
dict_derive = "0.4.0"
itertools = "0.10.5"
indexmap = "1.9.2"
log = { version = "0.4"}
env_logger = "0.10.0"
rawapi = { path = "./rawapi", version = "0.1.1"}